--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pg": "4.x",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "blueimp-md5": "~1.1.0"
+    "blueimp-md5": "~1.1.0",
   },
   "engines": {
     "node": "0.12.2"
